      \dQuote{Apple silicon} (\sQuote{M1}), \command{configure} now chooses
      \option{-fPIC} by default (instead of \option{-fpic}), as desired in
      \PR{18326}.

      \item There is some support for using the native date-time
      routines on macOS: this is only viable on recent versions
      (e.g.\sspace{}12.6) and does get some historical changes wrong.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item \code{USE_FC_LEN_T} is the default: this uses the
      correct (compiler-dependent) prototypes for Fortran BLAS/LAPACK
      routines called from C/C++, and requires adjustment of many such
      calls -- see \sQuote{Writing R Extensions} §6.6.1.

      %% g++ 11 supported c++23.
      %% 2022-09 Recent LLVM (>= 13?) and Apple (>= 13?) clang support c++2b.
      \item There is initial support for C++23 as several compilers are
      now supporting \code{-std=c++23} or \code{-std=c++2b} or similar.
      As for C++20, there no additional \command{configure} checks for
      C++23 features beyond a check that the compiler reports a
      \code{__cplusplus} value greater than that in the C++20 standard.
      C++ feature tests should be used.
    }
  }

  \subsection{FORTRAN FLAGS}{
    \itemize{
      \item The flag \option{-fno-optimize-sibling-calls} is no longer
      forced for \command{gfortran} 7 and later.  It should no longer be
      needed now using \sQuote{hidden} character-length arguments when
      calling BLAS/LAPACK routines from C/C++ is the default even for
      packages.  (Unless perhaps packages call Fortran code from C/C++
      without using \R{}'s headers and without allowing for these
      arguments.)
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The deprecated S-compatibility macros \code{DOUBLE_*} in
      \file{R_ext/Constants.h} (included by \file{R.h}) have been
      removed.

      \item The deprecated legacy typedefs of \code{Sint} and